--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,10 @@
   </head>
   <body class="container">
     <button id="complimentButton">Get a compliment</button>
+    <button id="fortuneButton">Get your fortune</button>
+    <button id="diceButton">Roll Dice</button>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
-    
   </body>
 </html>
